# codevector-task

./: .env.example  DEPLOYMENT.md  README.md  SUBMISSION_NOTE.md  alembic.ini  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_create_products_table.py
app/: db.py  main.py  models.py  pagination.py  schemas.py  service.py
app/core/: config.py
app/static/: app.js  index.html  styles.css
scripts/: seed_products.py
tests/: test_pagination.py
